// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleList/> :  It should not render any article 1`] = `
<div>
  <section
    class="articles icon"
  >
    <div
      class="loader"
    >
      Loading...
    </div>
    <article
      class="article icon"
    >
      <figure
        class="imageHolder"
      >
        <a
          target="_blank"
          href="https://www.indiatoday.in/technology/news/story/from-today-you-can-buy-oneplus-7t-for-as-low-as-rs-32-499-but-for-limited-time-here-is-how-1613124-2019-10-26"
        >
          <img
            src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201910/oneplus_7t-647x363.png?U1LzNdY28r_ou5wtAJR1.7nPL4MCYPMH"
            alt="From today you can buy OnePlus 7T for as low as Rs 32,499, but for limited time: Here is how - India Today"
          />
        </a>
      </figure>
      <div
        class="content"
      >
        <h3
          class="title"
        >
          <a
            target="_blank"
            href="https://www.indiatoday.in/technology/news/story/from-today-you-can-buy-oneplus-7t-for-as-low-as-rs-32-499-but-for-limited-time-here-is-how-1613124-2019-10-26"
          >
            From today you can buy OnePlus 7T for as low as Rs 32,499, but for limited time: Here is how - India Today
          </a>
        </h3>
        <div
          class="description"
        >
          <a
            target="_blank"
            href="https://www.indiatoday.in/technology/news/story/from-today-you-can-buy-oneplus-7t-for-as-low-as-rs-32-499-but-for-limited-time-here-is-how-1613124-2019-10-26"
          >
            The OnePlus 7T and OnePlus 7T Pro are two of the best Android phones you can buy this year. And now, as a part of a limited period offer, Indian buyers can get up to Rs 8,000 discount on a brand ne...
          </a>
        </div>
        <div
          class="meta"
        >
          by
          <a
            href="//www.indiatoday.in"
            target="_blank"
            class="author"
          >
            Indiatoday.in
          </a>
          <span
            class="timestamp"
          >
            Oct 26, 2019
          </span>
        </div>
      </div>
    </article>
    <article
      class="article icon"
    >
      <figure
        class="imageHolder"
      >
        <a
          target="_blank"
          href="https://www.gsmarena.com/huawei_nova_6_5g_could_be_on_the_way_with_dual_punchhole_selfie_cam-news-39825.php"
        >
          <img
            src="https://fdn.gsmarena.com/imgroot/news/19/10/huawei-nova-6-5g-render/-476x249w4/gsmarena_001.jpg"
            alt="Huawei nova 6 5G could be on the way, has a dual punch-hole selfie cam - GSMArena.com news - GSMArena.com"
          />
        </a>
      </figure>
      <div
        class="content"
      >
        <h3
          class="title"
        >
          <a
            target="_blank"
            href="https://www.gsmarena.com/huawei_nova_6_5g_could_be_on_the_way_with_dual_punchhole_selfie_cam-news-39825.php"
          >
            Huawei nova 6 5G could be on the way, has a dual punch-hole selfie cam - GSMArena.com news - GSMArena.com
          </a>
        </h3>
        <div
          class="description"
        >
          <a
            target="_blank"
            href="https://www.gsmarena.com/huawei_nova_6_5g_could_be_on_the_way_with_dual_punchhole_selfie_cam-news-39825.php"
          >
            A triple camera is on the back joined by what appears to be a ToF module, fingerprint reader's on the side.
          </a>
        </div>
        <div
          class="meta"
        >
          by
          <a
            href="//www.gsmarena.com"
            target="_blank"
            class="author"
          >
            Gsmarena.com
          </a>
          <span
            class="timestamp"
          >
            Oct 26, 2019
          </span>
        </div>
      </div>
    </article>
    <article
      class="article icon"
    >
      <figure
        class="imageHolder"
      >
        <a
          target="_blank"
          href="https://www.hindustantimes.com/tech/flipkart-festive-bonanza-xiaomi-poco-f1-samsung-galaxy-s9-google-pixel-3-available-with-huge-discounts/story-ExIbqjjTZs6UdwGO3IRzNI.html"
        >
          <img
            src="https://www.hindustantimes.com/rf/image_size_960x540/HT/p2/2019/10/26/Pictures/_4877348a-f7cb-11e9-800c-f2f87dfa36aa.jpg"
            alt="Flipkart Festive Bonanza: Xiaomi Poco F1, Samsung Galaxy S9, Google Pixel 3 available with huge dis... - Hindustan Times"
          />
        </a>
      </figure>
      <div
        class="content"
      >
        <h3
          class="title"
        >
          <a
            target="_blank"
            href="https://www.hindustantimes.com/tech/flipkart-festive-bonanza-xiaomi-poco-f1-samsung-galaxy-s9-google-pixel-3-available-with-huge-discounts/story-ExIbqjjTZs6UdwGO3IRzNI.html"
          >
            Flipkart Festive Bonanza: Xiaomi Poco F1, Samsung Galaxy S9, Google Pixel 3 available with huge dis... - Hindustan Times
          </a>
        </h3>
        <div
          class="description"
        >
          <a
            target="_blank"
            href="https://www.hindustantimes.com/tech/flipkart-festive-bonanza-xiaomi-poco-f1-samsung-galaxy-s9-google-pixel-3-available-with-huge-discounts/story-ExIbqjjTZs6UdwGO3IRzNI.html"
          >
            Flipkart Festive Bonanza is currently live and will continue till October 29. Here are the top deals, offers on smartphones.
          </a>
        </div>
        <div
          class="meta"
        >
          by
          <a
            href="//www.hindustantimes.com"
            target="_blank"
            class="author"
          >
            Hindustantimes.com
          </a>
          <span
            class="timestamp"
          >
            Oct 26, 2019
          </span>
        </div>
      </div>
    </article>
  </section>
</div>
`;

exports[`<ArticleList/> :  It should render 3 articles 1`] = `
<div>
  <section
    class="articles icon"
  >
    <article
      class="article icon"
    >
      <figure
        class="imageHolder"
      >
        <a
          target="_blank"
          href="https://www.indiatoday.in/technology/news/story/from-today-you-can-buy-oneplus-7t-for-as-low-as-rs-32-499-but-for-limited-time-here-is-how-1613124-2019-10-26"
        >
          <img
            src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201910/oneplus_7t-647x363.png?U1LzNdY28r_ou5wtAJR1.7nPL4MCYPMH"
            alt="From today you can buy OnePlus 7T for as low as Rs 32,499, but for limited time: Here is how - India Today"
          />
        </a>
      </figure>
      <div
        class="content"
      >
        <h3
          class="title"
        >
          <a
            target="_blank"
            href="https://www.indiatoday.in/technology/news/story/from-today-you-can-buy-oneplus-7t-for-as-low-as-rs-32-499-but-for-limited-time-here-is-how-1613124-2019-10-26"
          >
            From today you can buy OnePlus 7T for as low as Rs 32,499, but for limited time: Here is how - India Today
          </a>
        </h3>
        <div
          class="description"
        >
          <a
            target="_blank"
            href="https://www.indiatoday.in/technology/news/story/from-today-you-can-buy-oneplus-7t-for-as-low-as-rs-32-499-but-for-limited-time-here-is-how-1613124-2019-10-26"
          >
            The OnePlus 7T and OnePlus 7T Pro are two of the best Android phones you can buy this year. And now, as a part of a limited period offer, Indian buyers can get up to Rs 8,000 discount on a brand ne...
          </a>
        </div>
        <div
          class="meta"
        >
          by
          <a
            href="//www.indiatoday.in"
            target="_blank"
            class="author"
          >
            Indiatoday.in
          </a>
          <span
            class="timestamp"
          >
            Oct 26, 2019
          </span>
        </div>
      </div>
    </article>
    <article
      class="article icon"
    >
      <figure
        class="imageHolder"
      >
        <a
          target="_blank"
          href="https://www.gsmarena.com/huawei_nova_6_5g_could_be_on_the_way_with_dual_punchhole_selfie_cam-news-39825.php"
        >
          <img
            src="https://fdn.gsmarena.com/imgroot/news/19/10/huawei-nova-6-5g-render/-476x249w4/gsmarena_001.jpg"
            alt="Huawei nova 6 5G could be on the way, has a dual punch-hole selfie cam - GSMArena.com news - GSMArena.com"
          />
        </a>
      </figure>
      <div
        class="content"
      >
        <h3
          class="title"
        >
          <a
            target="_blank"
            href="https://www.gsmarena.com/huawei_nova_6_5g_could_be_on_the_way_with_dual_punchhole_selfie_cam-news-39825.php"
          >
            Huawei nova 6 5G could be on the way, has a dual punch-hole selfie cam - GSMArena.com news - GSMArena.com
          </a>
        </h3>
        <div
          class="description"
        >
          <a
            target="_blank"
            href="https://www.gsmarena.com/huawei_nova_6_5g_could_be_on_the_way_with_dual_punchhole_selfie_cam-news-39825.php"
          >
            A triple camera is on the back joined by what appears to be a ToF module, fingerprint reader's on the side.
          </a>
        </div>
        <div
          class="meta"
        >
          by
          <a
            href="//www.gsmarena.com"
            target="_blank"
            class="author"
          >
            Gsmarena.com
          </a>
          <span
            class="timestamp"
          >
            Oct 26, 2019
          </span>
        </div>
      </div>
    </article>
    <article
      class="article icon"
    >
      <figure
        class="imageHolder"
      >
        <a
          target="_blank"
          href="https://www.hindustantimes.com/tech/flipkart-festive-bonanza-xiaomi-poco-f1-samsung-galaxy-s9-google-pixel-3-available-with-huge-discounts/story-ExIbqjjTZs6UdwGO3IRzNI.html"
        >
          <img
            src="https://www.hindustantimes.com/rf/image_size_960x540/HT/p2/2019/10/26/Pictures/_4877348a-f7cb-11e9-800c-f2f87dfa36aa.jpg"
            alt="Flipkart Festive Bonanza: Xiaomi Poco F1, Samsung Galaxy S9, Google Pixel 3 available with huge dis... - Hindustan Times"
          />
        </a>
      </figure>
      <div
        class="content"
      >
        <h3
          class="title"
        >
          <a
            target="_blank"
            href="https://www.hindustantimes.com/tech/flipkart-festive-bonanza-xiaomi-poco-f1-samsung-galaxy-s9-google-pixel-3-available-with-huge-discounts/story-ExIbqjjTZs6UdwGO3IRzNI.html"
          >
            Flipkart Festive Bonanza: Xiaomi Poco F1, Samsung Galaxy S9, Google Pixel 3 available with huge dis... - Hindustan Times
          </a>
        </h3>
        <div
          class="description"
        >
          <a
            target="_blank"
            href="https://www.hindustantimes.com/tech/flipkart-festive-bonanza-xiaomi-poco-f1-samsung-galaxy-s9-google-pixel-3-available-with-huge-discounts/story-ExIbqjjTZs6UdwGO3IRzNI.html"
          >
            Flipkart Festive Bonanza is currently live and will continue till October 29. Here are the top deals, offers on smartphones.
          </a>
        </div>
        <div
          class="meta"
        >
          by
          <a
            href="//www.hindustantimes.com"
            target="_blank"
            class="author"
          >
            Hindustantimes.com
          </a>
          <span
            class="timestamp"
          >
            Oct 26, 2019
          </span>
        </div>
      </div>
    </article>
  </section>
</div>
`;
